--- a/style.css
+++ b/style.css
@@ -657,3 +657,162 @@ line-height: 18px; /* 138.462% */
 .finish-wrap img.active{
     display: block;
 }
+
+
+
+
+.change-platform .item img.mob{
+    display: none;
+}
+@media(max-width:850px){
+    .top-side-header{
+        display: none;
+    }
+    .main-header-inner .wrap{
+        margin: 0px;
+    }
+    .main-header{
+        padding-left: 12px;
+    }
+    .login-part h1{
+        padding-top: 16px;
+        font-size: 17px;
+        line-height: 20px;
+    }
+    .change-platform{
+        gap: 12px;
+    }
+    .change-platform .item img{
+        display: none;
+    }
+    .change-platform .item img.mob{
+        display: block;
+        width: 40px;
+    }
+    form{
+        border: none;
+        background: transparent;
+        box-shadow: none;
+    }
+    .change-platform{
+        padding: 0 20px;
+    }
+    .login-block{
+        padding: 0 20px;
+    }
+    .input-mail-wrap .input{
+        height: 48px;
+    }
+    .input-mail-wrap select{
+        height: 48px;
+        width: 140px;
+    }
+    .input-mail-wrap .form-input{
+        width: 100%;
+    }
+    .change-platform .item.other{
+        margin-left: 7px;
+    }
+    .login-block .login-buttons{
+        flex-wrap: wrap;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 14px;
+    }
+    .login-block .login-buttons .next{
+        width: 176px;
+    height: 44px;
+    padding-left: 20px;
+    }
+    .btn-freak{
+        width: 110px;
+    }
+    .login-block .login-buttons .next span{
+        font-size: 16px;
+    }
+    .login-block .login-buttons{
+        margin-bottom: 38px;
+    }
+    .oher-variation-login{
+        padding: 0 20px;
+    }
+    .vkid{
+        height: 44px;
+    }
+    .ysligi{
+        height: 44px;
+    }
+    .oher-variation-login h4{
+        margin-bottom: 17px;
+    }
+    .oher-variation-login{
+        margin-bottom: 35px;
+    }
+    .nex-information{
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+    .nex-information a{
+        font-size: 16px;
+    }
+
+    .password-title{
+        font-size: 17px;
+    line-height: 20px;
+    padding-right: 20px;
+    padding-top: 16px;
+    padding-left: 20px;
+    }
+    .password-login{
+        padding: 0 20px;
+    }
+    .change-login{
+        font-size: 16px;
+    }
+
+    .password-block{
+        padding: 0 20px;
+    }
+    .password-block .wrap{
+        height: 48px;
+    }
+    #myPass{
+        line-height: 28px;
+        font-size: 16px;
+    }
+    .password-block .wrap svg{
+        right: 16px;
+        top: 15px;
+    }
+    .password-block .wrap{
+        margin-bottom: 22px;
+    }
+
+    .finish-login-buttons .next{
+        height: 45px;
+    width: 130px;
+    }
+    .voiti-freak{
+        margin-left: 25px;
+    }
+    .finish-login-buttons .next span{
+        font-size: 16px !important;
+    }
+    .finish-login-buttons .save-in-system{
+        font-size: 16px;
+    }
+    .vosstanovit-dostyp-password .inner a, .password-qr span{
+        font-size: 16px;
+    }
+    .vosstanovit-dostyp-password{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+
+
+
+
+}
